# uget

./: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
Windows/: Makefile.am  make-pot.bat
Windows/CodeBlocks/: mingw-config.txt  test-conf.cbp  test-download.cbp  test-ipc.cbp  test-xmlrpc.cbp  uget-cmd.cbp  uget-gtk.cbp  uget.workspace  uglib.cbp
Windows/msvc/: msvc-config.txt  test-conf.vcproj  test-download.vcproj  test-ipc.vcproj  test-xmlrpc.vcproj  uget-cmd.vcproj  uget-gtk.vcproj  uget.sln  uglib.vcproj
Windows/nsis/: License-install.txt  uget-no-gtk.nsi
pixmaps/: Makefile.am
pixmaps/icons/hicolor/: index.theme
po/: ChangeLog  IN.po  LINGUAS  POTFILES.in  ar.po  be.po  bg.po  bn_BD.po  ca.po  cs.po  cz.po  da.po  de.po  es.po  fa.po  fr.po  he.po  hr.po  hu.po  id.po  it.po  ka_GE.po  kk.po  ku.po  pl.po  ru.po  sk_SK.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
tests/: Makefile.am  test-conf.c  test-download.c  test-ipc.c  test-xmlrpc.c
uget-cmd/: Makefile.am  UgApp-cmd-main.c  UgApp-cmd.c  UgApp-cmd.h  UgCategory-cmd.c  UgCategory-cmd.h  UgetCmd.c  UgetCmd.h  main-cmd.c
uget-gtk/: Makefile.am  UgApp-gtk-aria2.c  UgApp-gtk-callback.c  UgApp-gtk-gui.c  UgApp-gtk-main.c  UgApp-gtk-timeout.c  UgApp-gtk.c  UgApp-gtk.h  UgBanner.c  UgBanner.h  UgBatchForm.c  UgBatchForm.h  UgCategory-gtk.c  UgCategory-gtk.h  UgCategoryDialog.c  UgCategoryDialog.h  UgCategoryForm.c  UgCategoryForm.h  UgCategoryWidget.c  UgCategoryWidget.h  UgDownloadDialog.c  UgDownloadDialog.h  UgDownloadForm.c  UgDownloadForm.h  UgDownloadWidget.c  UgDownloadWidget.h  UgProxyForm.c  UgProxyForm.h  UgScheduleForm.c  UgScheduleForm.h  UgScheduleGrid.c  UgScheduleGrid.h  UgSelector.c  UgSelector.h  UgSetting.c  UgSetting.h  UgSettingDialog.c  UgSettingDialog.h  UgSettingForm.c  UgSettingForm.h  (+11 more)
uglib/: Makefile.am  UgApp-base.c  UgApp-base.h  UgApp.c  UgApp.h  UgCategory.c  UgCategory.h  UgData-download.c  UgData-download.h  UgData.c  UgData.h  UgDataset.c  UgDataset.h  UgHtml.c  UgHtml.h  UgIpc.c  UgIpc.h  UgMarkup.c  UgMarkup.h  UgMessage.c  UgMessage.h  UgOption.c  UgOption.h  UgPlugin-aria2.c  UgPlugin-aria2.h  UgPlugin-curl.c  UgPlugin-curl.h  UgPlugin.c  UgPlugin.h  UgRegistry.c  UgRegistry.h  UgRunning.c  UgRunning.h  UgStdio.c  UgStdio.h  UgString.c  UgString.h  UgUri.c  UgUri.h  UgUtils.c  (+9 more)
