EXTRA_DIST = \
	make-pot.bat \
	nsis/uget-no-gtk.nsi \
	nsis/License-install.txt \
	resources/uget.rc \
	resources/uget-icon.ico \
	msvc/msvc-config.txt \
	msvc/test-conf.vcproj \
	msvc/test-download.vcproj \
	msvc/test-ipc.vcproj \
	msvc/uget-cmd.vcproj \
	msvc/uget-gtk.vcproj \
	msvc/uget.sln \
	msvc/uglib.vcproj \
	CodeBlocks/mingw-config.txt \
	CodeBlocks/test-conf.cbp \
	CodeBlocks/test-download.cbp \
	CodeBlocks/test-ipc.cbp \
	CodeBlocks/uget.workspace \
	CodeBlocks/uget-cmd.cbp \
	CodeBlocks/uget-gtk.cbp \
	CodeBlocks/uglib.cbp

